<resources>
    <string name="app_name">相册</string>
    <string name="string_back">返回</string>
    <string name="string_main_bg">主界面背景</string>

    <string name="string_in_frame">进入画框</string>
    <string name="string_settings_frame">画框设置</string>
    <string name="string_clear_frame">清空画框</string>
    <string name="string_roll_speed">滚动速度：</string>
    <string name="string_roll_type">滚动特效：</string>
    <string name="string_smooth">平滑</string>
    <string name="string_reduce">缩小</string>
    <string name="string_roll_speed_hint">设置画框滚动速度(1000~120000ms)</string>
    <string name="string_millisecond">ms</string>

    <string name="string_zero_time">00:00</string>

    <string name="string_image_icon">左边图标</string>
    <string name="string_add">添加</string>
    <string name="string_settings">设置</string>
    <string name="string_cancel">取消</string>

    <string name="string_dialog_title_default">这是标题</string>
    <string name="string_dialog_message_default">这是内容</string>
    <string name="string_dialog_update">立即更新</string>
    <string name="string_dialog_progress_full">100</string>

    <string name="string_nature">自然风景</string>

    <string name="string_pitch_on">选中</string>

</resources>