<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tv_update_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_dialog_title_default"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv_update_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_dialog_message_default"
        android:paddingRight="100dp"
        android:paddingLeft="100dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:textColor="@color/gray"/>

    <ProgressBar
        android:id="@+id/pb_update_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_update_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_dialog_progress_full"
        android:textColor="@color/gray"
        android:textSize="12sp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/deep_blue"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/ll_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/string_dialog_update"
            android:textColor="@color/deep_blue"
            android:textSize="16sp"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/deep_blue"/>

        <Button
            android:id="@+id/btn_exit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/string_cancel"
            android:textColor="@color/deep_blue"
            android:textSize="16sp"/>

    </LinearLayout>

</LinearLayout>